fix: Polymorphic structure cache storage